--- a/.github/workflows/tmate.yml
+++ b/.github/workflows/tmate.yml
@@ -16,7 +16,7 @@ jobs:
       - name: ⬇️ Checkout
         uses: actions/checkout@v3
         with:
-          fetch-depth: 0  # Cho phép git pull hoạt động đúng
+          fetch-depth: 0  # Bắt buộc để git pull hoạt động đúng
 
       - name: 📁 Prepare dirs
         run: mkdir -p links .backup
@@ -48,17 +48,14 @@ jobs:
           name="${{ github.event.client_payload.vps_name || 'manual-vps' }}"
           zip -qr ".backup/$name.zip" . -x ".git/*" ".github/*" ".backup/*" || true
 
-      - name: 📤 Pull latest from origin to avoid divergence
+      - name: 📤 Commit và push thay vì dùng git-auto-commit-action
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git pull --rebase origin main || true
-
-      - name: 📤 Push updated files
-        uses: stefanzweifel/git-auto-commit-action@v5
-        with:
-          commit_message: "🔁 Updated SSH + backup"
-          file_pattern: 'links/*.txt .backup/*.zip'
+          git add links/*.txt .backup/*.zip
+          git commit -m "🔁 Updated SSH + backup" || echo "Không có gì để commit"
+          git push origin main || echo "⚠️ Push thất bại vì có commit khác"
 
       - name: ⏳ Keep VPS alive
         run: |
