--- a/.github/workflows/tmate.yml
+++ b/.github/workflows/tmate.yml
@@ -16,6 +16,14 @@ jobs:
       - name: ⬇️ Checkout
         uses: actions/checkout@v3
 
+      - name: 🧠 Đồng bộ với GitHub (commit A) và giữ dữ liệu
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git stash --include-untracked || true
+          git pull --rebase || true
+          git stash pop || true
+
       - name: 📁 Prepare dirs
         run: mkdir -p links .backup
 
@@ -46,7 +54,7 @@ jobs:
           name="${{ github.event.client_payload.vps_name || 'manual-vps' }}"
           zip -qr ".backup/$name.zip" . -x ".git/*" ".github/*" ".backup/*" || true
 
-      - name: 📤 Push updated files
+      - name: 📤 Push updated files (if needed)
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: "🔁 Updated SSH + backup"
@@ -54,7 +62,7 @@ jobs:
 
       - name: ⏳ Keep VPS alive
         run: |
-          for i in $(seq 1 $((360))); do
+          for i in $(seq 1 360); do
             echo "🟢 Running minute $i/360..."
             sleep 60
           done
@@ -64,7 +72,7 @@ jobs:
         run: |
           curl -X POST \
             -H "Accept: application/vnd.github+json" \
-            -H "Authorization: Bearer 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" \
+            -H "Authorization: Bearer ${{ secrets.PAT }}" \
             -H "Content-Type: application/json" \
             https://api.github.com/repos/${{ github.repository }}/dispatches \
             -d '{"event_type": "create-vps", "client_payload": {"vps_name": "manual-vps", "backup": true}}'
